--- a/apperator/templates/apperator.jinja
+++ b/apperator/templates/apperator.jinja
@@ -69,6 +69,9 @@ spec:
         {% for hostVolume in container.hostVolumes %} {% set splitvolume = hostVolume.split(':') %}
         - name: hostpath-volume-{{ outer_loop.index }}-{{ loop.index }}
           mountPath: {{splitvolume[1]}}
+          {% if splitvolume|length > 2 and splitvolume[2] == 'ro' %}
+          readOnly: true
+          {% endif %}
         {% endfor %}
         {% endif %}
         {% endfor %}
